export interface Hospital {
  visitHospital(): string;
}
