@startuml

skinparam class {
  backgroundColor lightgoldenrodyellow
  arrowColor darkgoldenrod
  borderColor darkgoldenrod
}

interface Hospital {
  visitHospital(): string
}

class Patient <PRE> {
  + visitHospital(): string
}

class PandemicPatient <PRE> {
  - patient: Patient
  constructor(patient: Patient)
  + visitHospital(): string
  - disinfectHands(): string
}

Hospital <|.. Patient
Hospital <|.. PandemicPatient

Patient <- PandemicPatient

@enduml
